third commit correnction

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,12 @@ flutter:
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/brand.png
+    - assets/donate.png
+    - assets/locate.png
+    - assets/no_events.png
+    - assets/post.png
+    - assets/report.png
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
